--- a/manuscrit_G_LEFEBVRE/main.tex
+++ b/manuscrit_G_LEFEBVRE/main.tex
@@ -65,6 +65,13 @@
 }
 
 %%%\usepackage{afterpage}%  %%% Evite le comportement grande figure sur une seule et unique page
+
+%%%%% Pour faire un saut de ligne apres un titre de paragraph
+%\usepackage[raggedright]{titlesec}
+%\titleformat{\paragraph}[hang]{\normalfont\normalsize\bfseries}{\theparagraph}{1em}{}
+%\titlespacing*{\paragraph}{0pt}{3.25ex plus 1ex minus .2ex}{0.5em}
+
+
 \usepackage{float}% Fournit l'option H pour les figures
 
 \usepackage{mathabx} %% Pour avoir proprement le grand symbole \sqrt notamment
