--- a/manuscrit_G_LEFEBVRE/mes_macros.tex
+++ b/manuscrit_G_LEFEBVRE/mes_macros.tex
@@ -79,8 +79,8 @@
 \newcommand{\Tgini}{{T_g}_{ini}}
 \newcommand{\Tfend}{{T_f}_{end}}
 \newcommand{\Tgend}{{T_g}_{end}}
-\newcommand{\twinweno}{twin-WENO5}
-\newcommand{\Twinweno}{Twin-WENO5}
+\newcommand{\twinweno}{twin-WENO5\xspace}
+\newcommand{\Twinweno}{Twin-WENO5\xspace}
 
 \newcommand{\diff}[2]{\frac{\partial #1}{\partial #2}}
 
