--- a/manuscrit_G_LEFEBVRE/tex_pictures/weno5_twin_stencil-NonU.tex
+++ b/manuscrit_G_LEFEBVRE/tex_pictures/weno5_twin_stencil-NonU.tex
@@ -1,5 +1,7 @@
 \setlength{\unitlength}{.8mm}
-\begin{picture}(97,65)
+\begin{picture}(105,65)
+%%\rect{0}{0}{105}{65}
+\put(5,0){
 \multiput(8,8)(0,8){8}{\line(1,0){84}}
 \multiput(8,8)(12,0){8}{\line(0,1){56}}
 \multiput(14,12)(12,0){7}{\multiput(0,0)(0,8){7}{\circle{2}}}
@@ -11,6 +13,7 @@
 \put(6,8){\vector(0,1){8}}
 \put(20,6){\vector(-1,0){12}}
 \put(6,16){\vector(0,-1){8}}
-\put(0,11){$\Delta y$}
+\put(-3,11){$\Delta y$}
 \put(9,2){$\Delta x$}
+}
 \end{picture}
