--- a/manuscrit_G_LEFEBVRE/tex_pictures/weno5_twin_stencil.tex
+++ b/manuscrit_G_LEFEBVRE/tex_pictures/weno5_twin_stencil.tex
@@ -1,5 +1,7 @@
 \setlength{\unitlength}{.8mm}
-\begin{picture}(65,65)
+\begin{picture}(75,65)
+%%\rect{0}{0}{75}{65}
+\put(5,0){
 \multiput(8,8)(0,8){8}{\line(1,0){56}}
 \multiput(8,8)(8,0){8}{\line(0,1){56}}
 \multiput(12,12)(8,0){7}{\multiput(0,0)(0,8){7}{\circle{2}}}
@@ -11,6 +13,7 @@
 \put(6,8){\vector(0,1){8}}
 \put(16,6){\vector(-1,0){8}}
 \put(6,16){\vector(0,-1){8}}
-\put(0,11){$\Delta y$}
+\put(-3,11){$\Delta y$}
 \put(9,2){$\Delta x$}
+}
 \end{picture}
