--- a/manuscrit_G_LEFEBVRE/main.tex
+++ b/manuscrit_G_LEFEBVRE/main.tex
@@ -53,7 +53,7 @@
 \usepackage[page]{appendix}
 \renewcommand{\appendixtocname}{{\fontfamily{pzc}\selectfont \Large  Annexes}}
 %\renewcommand{\appendixpagename}{Annexes}
-\def\appendixpage{\newpage\vspace*{9cm}
+\def\appendixpage{\cleardoublepage\vspace*{9cm}
 \begin{center}
 %\Huge\textbf{Annexes}
 %\textpzc{\fontsize{2cm}{1em}\selectfont ANNEXES}
@@ -205,7 +205,7 @@
 
 
 %%%%%%% Variables d'environnement
-\graphicspath{{../img/}{../img_publi_GIST/}} %%
+\graphicspath{{../img/}{../img_publi_GIST/}{../img/simu/}} %%
 
 
 \setlength\doublerulesep{2mm} %% hauteur entre 2 \hline successifs
@@ -371,24 +371,24 @@
 \end{appendices}
 
 \backmatter  %%%% l'épilogue du document
-\specialchap{Test}
-%\updatechaptername
-%\renewcommand\chaptername{Test}
-%\chapter{Test} %%%pour allonger le sommaire (pour faire des tests)
-\subsubsection{test1}\paragraph{hep}
-\subsubsection{test2}\paragraph{hep}
-\subsubsection{test3}\paragraph{hep}
-\subsubsection{test4}\paragraph{hep}
-\subsubsection{test5}\paragraph{hep}
-\subsubsection{test6}\paragraph{hep}
-\subsubsection{test7}\paragraph{hep}
-\subsubsection{test8}\paragraph{hep}
-\subsubsection{test9}\paragraph{hep}
-\subsubsection{test10}\paragraph{hep}
-\subsubsection{test11}\paragraph{hep}
-\subsubsection{test12}\paragraph{hep}
-\subsubsection{test13}\paragraph{hep}
-\subsubsection{test14}\paragraph{hep}
+%\specialchap{Test}
+%%\updatechaptername
+%%\renewcommand\chaptername{Test}
+%%\chapter{Test} %%%pour allonger le sommaire (pour faire des tests)
+%\subsubsection{test1}\paragraph{hep}
+%\subsubsection{test2}\paragraph{hep}
+%\subsubsection{test3}\paragraph{hep}
+%\subsubsection{test4}\paragraph{hep}
+%\subsubsection{test5}\paragraph{hep}
+%\subsubsection{test6}\paragraph{hep}
+%\subsubsection{test7}\paragraph{hep}
+%\subsubsection{test8}\paragraph{hep}
+%\subsubsection{test9}\paragraph{hep}
+%\subsubsection{test10}\paragraph{hep}
+%\subsubsection{test11}\paragraph{hep}
+%\subsubsection{test12}\paragraph{hep}
+%\subsubsection{test13}\paragraph{hep}
+%\subsubsection{test14}\paragraph{hep}
 
 \specialchap{Remerciements} %%% defauts si mis dans un autre fichier avec subfile
 %\chapter{Remerciements}
